# disco

./: .gitignore  README.md  example.py  pyproject.toml  setup.py
disco/: __init__.py  abstract_disco.py  disco.py  dummy_parallel_dims.py  muon_utils.py  newton_schulz_triton.py  norm_helper.py  utils.py
